# shape_detection

./: LICENSE  README.md
shapes2d/: pyproject.toml
shapes2d/shapes2d/: shapes.py
shapes2d/tests/: test_shapes2d.py
