[tool.poetry]
name = "shapes2d"
version = "0.1.0"
description = ""
authors = ["Shehroz Aslam <shehrozaslam01@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = ">=1.19.2,<1.21.2"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
